Avoid Integer instantiations (new Integer).
Change-Id: I8ec0e2d5f4a38952d7cf9a4abce0e9161bbd7174
Signed-off-by: Rajesh_Sindagi <Rajesh_Sindagi@dell.com>